--- a/src/scss/_tickets.scss
+++ b/src/scss/_tickets.scss
@@ -20,7 +20,7 @@ table.tix_tickets_table {
   }
 
   tr:not(:first-child) {
-    border-top: solid 1px $lightBlue;
+    border-top: solid 1px $lightestBlue;
   }
 
 	td, th {
