--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -3,7 +3,8 @@ $bodyFont:'Open Sans', sans-serif;
 $headingFont: 'Arvo', serif;
 
 // Colours
-$lightBlue:	#97cade;		//	rgb(151,202,222)
+$lightestBlue:	#97cade;		//	rgb(151,202,222)
+$lightBlue: #226ad0;
 $medBlue:	#1d5cb5;		//  rgb(22,49,128)
 $darkBlue: #1d0a69;		//	rgb(29,10,105)
 $darkPurple: #6E1799;		//	rgb(61,4,102)
