--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -74,7 +74,7 @@ a:visited {
       }
 
       &:nth-child(even) {
-        background: $lightBlue;
+        background: $lightestBlue;
         color: $white;
         a {
           color: $white;
