--- a/src/scss/components/_subscribe_news.scss
+++ b/src/scss/components/_subscribe_news.scss
@@ -1,18 +1,18 @@
 .wp-block-jetpack-subscriptions {
-  button {
-    background: $medBlue;
-    color: #fff;
-  	font-size: 1em;
+  #subscribe-email input {
+    width: 100%;
   }
 }
 
-@media screen and (min-width: 64rem) {
-	.wp-block-jetpack-subscriptions {
-		width: 50%;
-		padding: 1.5rem;
-		margin: 1.5rem auto;
-		border: 1px solid #ddd;
-		border-radius: .5rem;
-		text-align: center;
-	}
-}
+// @media screen and (min-width: 64rem) {
+// 	..wp-block-jetpack-subscriptions{
+//     form {
+//       display: flex;
+
+      // #subscribe-email {
+      // }
+      // #subscribe-submit {
+      // }
+//     }
+//   }
+// }
