--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -20,6 +20,9 @@ a:visited {
   color: $primaryColour;
 }
 
+input[type="text"], input[type="email"], input[type="url"], input[type="password"], input[type="search"], input[type="number"], input[type="tel"], input[type="range"], input[type="date"], input[type="month"], input[type="week"], input[type="time"], input[type="datetime"], input[type="datetime-local"], input[type="color"], textarea {
+  padding: 0.75rem;
+}
 .site-content {
   min-height: calc(100vh - 210px);
   overflow: hidden;
