--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -263,7 +263,7 @@ ul {
   list-style: none;
 }
 
-ul:not(.menu):not(.wordcamp-organizers):not(.wordcamp-speakers):not(.wordcamp-sponsors) li::before {
+ul:not(.menu):not(.sub-menu):not(.wordcamp-organizers):not(.wordcamp-speakers):not(.wordcamp-sponsors) li::before {
   content: "\2022";
   color: $medBlue;
   font-weight: bold;
