Fix logo, subscribe box, .boxes, menu items

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -155,7 +155,8 @@
       a {
         display: block;
         color: $white;
-        padding: 1rem;
+        margin: 0.5rem 0;
+        padding: 0.5rem 1rem;
         width: 100%;
         font-size: 1.2rem;
 
@@ -175,7 +176,6 @@
         top: 0;
 
         li a {
-          margin: 0.5rem 0 0.5rem 0;
           padding-left: 1.5rem;
         }
       }
@@ -205,7 +205,7 @@
     font-size: 1.5rem;
     position: absolute;
     left: 1rem;
-    top: -35px;
+    top: -25px;
     transform: translateY(-50%);
 
     @media screen and (min-width: 64rem) {
