--- a/src/scss/components/_subscribe_news.scss
+++ b/src/scss/components/_subscribe_news.scss
@@ -10,7 +10,7 @@
       display: flex;
       align-items: baseline;
 
-      #subscribe-email {
+      #subscribe-submit {
         width: auto;
       }
     }
