--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,7 +1,7 @@
 .site-footer {
   position: relative;
   padding: 1em 1em 230px 1em;
-  margin-top: 4em;
+  margin-top: 0;
   background-position: bottom center;
 
   &:before {
@@ -91,6 +91,8 @@
 }
 
 @media screen and (min-width: 30rem) {
+  margin-top: 4em;
+
   .sponsor-logo {
     padding: 1rem;
   }
