--- a/src/scss/home/_boxes.scss
+++ b/src/scss/home/_boxes.scss
@@ -24,15 +24,16 @@
       content: "";
     }
 
-    &__volunteers:before {
+    &--volunteers:before {
       background-image: url("https://2019.dublin.wordcamp.org/files/2019/07/volunteer-small.png");
     }
 
-    &__speakers:before {
+    &--speakers:before,
+    &--sponsors:before {
       background-image: url("https://2019.dublin.wordcamp.org/files/2019/07/speakers.png");
     }
 
-    &__ticket:before {
+    &--ticket:before {
       background-image: url("https://2019.dublin.wordcamp.org/files/2019/07/tickets.png");
     }
   }
@@ -48,7 +49,10 @@
       padding: 0.5em;
       border: 1px solid $borderColour;
       margin-left: 0;
-      margin-right: 0;
+
+      &:last-child {
+        margin-right: 0;
+      }
     }
   }
 }
