Add icon to buttons

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -1,4 +1,4 @@
-button,
+button:not(.menu-toggle):not(.tix_other_payment_options),
 input[type="button"],
 input[type="reset"],
 input[type="submit"],
@@ -13,14 +13,29 @@ input[type="submit"],
   border-radius: 3px;
   width: 100%;
   text-decoration: none;
+  text-transform: capitalize;
+
+  &:not(.more-link):not(.tix-checkout-button):after {
+    content: "→";
+    display: inline-block;
+    transition: all .15s ease-out;
+    margin-left: 5px;
+    position: relative;
+    left: 0;
+  }
 
   @media screen and (min-width: 30rem) {
     width: auto;
     min-width: 10em;
 
     &:hover {
-      background: $lightBlue;
+      background: $lightBlue !important;
       color: #fff;
+
+      &:not(.more-link):after {
+        left: 5px;
+      }
+
     }
 
     &:visited {
