Remove arrows from .dropdown-toggle buttons

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -1,4 +1,4 @@
-button:not(.menu-toggle):not(.tix_other_payment_options),
+button:not(.menu-toggle):not(.tix_other_payment_options):not(.dropdown-toggle),
 input[type="button"],
 input[type="reset"],
 input[type="submit"],
