Fix form on the Code of Conduct page

--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -13,7 +13,8 @@ form {
       &:nth-child(odd) {
         margin-right: 8px;
 
-        .page-id-17 & {
+        .page-id-17 &,
+        .page-id-19 & {
           margin-right: 0;
           margin-left: 8px;
         }
@@ -22,7 +23,8 @@ form {
       &:nth-child(even) {
         margin-left: 8px;
 
-        .page-id-17 & {
+        .page-id-17 &,
+        .page-id-19 & {
           margin-left: 0;
           margin-right: 8px;
         }
