Fix a contact form on the Visa for #WCDublin page

--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -14,7 +14,8 @@ form {
         margin-right: 8px;
 
         .page-id-17 &,
-        .page-id-19 & {
+        .page-id-19 &,
+        .page-id-546 & {
           margin-right: 0;
           margin-left: 8px;
         }
@@ -24,7 +25,8 @@ form {
         margin-left: 8px;
 
         .page-id-17 &,
-        .page-id-19 & {
+        .page-id-19 &,
+        .page-id-546 & {
           margin-left: 0;
           margin-right: 8px;
         }
