--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -155,7 +155,7 @@
       a {
         display: block;
         color: $white;
-        margin: 0.5rem 0;
+        margin: 0.25rem 0;
         padding: 0.5rem 1rem;
         width: 100%;
         font-size: 1.2rem;
@@ -205,12 +205,16 @@
     font-size: 1.5rem;
     position: absolute;
     left: 1rem;
-    top: -25px;
+    top: -35px;
     transform: translateY(-50%);
 
+    .toggled-on & {
+      top: -39px;
+    }
+
     @media screen and (min-width: 64rem) {
-    font-size: 2rem;
-    top: 50%;
+      font-size: 2rem;
+      top: 50%;
     }
   }
 }
