Fix sponsors logos aligment

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -320,3 +320,9 @@ ul:not(.menu):not(.sub-menu):not(.wordcamp-organizers):not(.wordcamp-speakers):n
     color: #fff;
   }
 }
+
+
+#eu-cookie-law input.accept:hover {
+  color: #fff;
+
+}
