--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -91,20 +91,38 @@
 }
 
 @media screen and (min-width: 30rem) {
-  margin-top: 4em;
+  .sponsor-level {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 
-  .sponsor-logo {
-    padding: 1rem;
-  }
+    a {
+      padding: 0.5rem 1rem;
+    }
 
-  .sponsor-level.platinum a {
-    width: 50%;
-    float: left;
-  }
+    h4 {
+      width: 100%;
+    }
 
-  .sponsor-level.gold a {
-    width: 33%;
-    float: left;
+    &.platinum a {
+      width: 50%;
+      float: left;
+    }
+
+    &.gold a {
+      width: 33%;
+      float: left;
+    }
+
+    &.silver a {
+      width: 25%;
+      float: left;
+    }
+
+    &.venue-sponsor a {
+      width: 50%;
+      float: left;
+    }
   }
 }
 
@@ -116,38 +134,29 @@
 		padding: 1rem;
 		border-top: 2px solid #ddd;
 		border-bottom: 2px solid #ddd;
+  }
 
-		.sponsor-level.gold a.sponsor-logo,
-		.sponsor-level.silver a.sponsor-logo,
-		.sponsor-level.bronze a.sponsor-logo,
-		.sponsor-level.in-kind a.sponsor-logo,
-		.sponsor-level.wood a.sponsor-logo,
-		.sponsor-level.cardboard a.sponsor-logo,
-		.sponsor-level.paper a.sponsor-logo,
-		.sponsor-level.tissue a.sponsor-logo {
-			display: inline-block;
-      padding: 1rem;
-		}
+  .sponsor-level {
+    a {
+      padding: 0.5rem 1.5rem;
+    }
 
-		.sponsor-level.gold a.sponsor-logo img,
-		.sponsor-level.silver a.sponsor-logo img,
-		.sponsor-level.bronze a.sponsor-logo img,
-		.sponsor-level.in-kind a.sponsor-logo img,
-		.sponsor-level.wood a.sponsor-logo img,
-		.sponsor-level.cardboard a.sponsor-logo img,
-		.sponsor-level.paper a.sponsor-logo img,
-		.sponsor-level.tissue a.sponsor-logo img {
-			padding: .5rem .5rem;
-		}
+    &.platinum a {
+      width: 33%;
+    }
 
-		.sponsor-level.gold a.sponsor-logo { max-width: 50%; }
-		.sponsor-level.silver a.sponsor-logo { max-width: 33%; }
-		.sponsor-level.bronze a.sponsor-logo { max-width: 28%; }
-		.sponsor-level.in-kind a.sponsor-logo { max-width: 26%; }
-		.sponsor-level.wood a.sponsor-logo { max-width: 24%; }
-		.sponsor-level.cardboard a.sponsor-logo { max-width: 22%; }
-		.sponsor-level.paper a.sponsor-logo { max-width: 20%; }
-		.sponsor-level.tissue a.sponsor-logo { max-width: 18%; }
+    &.gold a {
+      width: 25%;
+    }
+
+    &.silver a {
+      width: 20%;
+    }
+
+    &.venue-sponsor a {
+      width: 33%;
+      float: left;
+    }
   }
 }
 
