--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -43,3 +43,12 @@ input[type="submit"],
     }
   }
 }
+
+.blog .more-link {
+  width: calc(100% - 1.875em);
+
+  @media screen and (min-width: 30rem) {
+    width: auto;
+    min-width: 10em;
+  }
+}
