--- a/src/scss/_singular.scss
+++ b/src/scss/_singular.scss
@@ -12,6 +12,12 @@
   }
 }
 
+.single {
+  .entry-header {
+    margin-top: 2em;
+  }
+}
+
 @media screen and (min-width: 64rem) {
   .single {
     .site-content {
