Make sponsors logos smaller in the mobile and desktop footer

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -90,18 +90,36 @@
   display: none;
 }
 
-@media screen and (min-width: 30rem) {
-  .sponsor-level {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+.sponsor-level {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 
-    a {
-      padding: 0.5rem 3rem;
+  h4 {
+    width: 100%;
+  }
+
+  a {
+    width: 50%;
+    padding: 0.5rem;
+
+    &:nth-child(odd) {
+      padding-right: 0;
     }
 
-    h4 {
-      width: 100%;
+    &:nth-child(even) {
+      padding-left: 0;
+    }
+  }
+}
+
+@media screen and (min-width: 30rem) {
+  .sponsor-level {
+    a {
+      &:nth-child(odd),
+      &:nth-child(even) {
+        padding: 0.5rem 1rem;
+      }
     }
 
     &.platinum a {
@@ -117,6 +135,43 @@
     &.silver a {
       width: 25%;
       float: left;
+    }
+
+    &.bronze a {
+      width: 20%;
+      float: left;
+    }
+
+    &.venue-sponsor a {
+      width: 33%;
+      float: left;
+    }
+  }
+}
+
+@media screen and (min-width: 48rem) {
+  .sponsor-level {
+    a {
+      &:nth-child(odd),
+      &:nth-child(even) {
+        padding: 0.5rem 1.5rem;
+      }
+    }
+
+    &.platinum a {
+      width: 33%;
+    }
+
+    &.gold a {
+      width: 25%;
+    }
+
+    &.silver a {
+      width: 20%;
+    }
+
+    &.bronze a {
+      width: 16%;
     }
 
     &.venue-sponsor a {
@@ -138,30 +193,15 @@
 
   .sponsor-level {
     a {
-      padding: 0.5rem 1.5rem;
-    }
-
-    &.platinum a {
-      width: 33%;
-    }
-
-    &.gold a {
-      width: 25%;
-    }
-
-    &.silver a {
-      width: 20%;
-    }
-
-    &.venue-sponsor a {
-      width: 33%;
-      float: left;
+      &:nth-child(odd),
+      &:nth-child(even) {
+        padding: 0.5rem 2rem;
+      }
     }
   }
 }
 
 @media screen and (min-width: 82.5rem) {
-
   // Back to Top styles
   .footer-widgets-block:first-child {
     bottom: 0.5rem;
