--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -70,6 +70,29 @@
       z-index: 0;
     }
 
+
+    &::after {
+      display: block;
+      width: 150px;
+      height: 150px;
+      content: '';
+      position: absolute;
+      top: 190px;
+      right: -70px;
+      background: url('/files/2019/09/Wapuu-Dublin-2019-CMYK2-150x150.png');
+      background-size: contain;
+      background-position: center;
+      background-repeat: no-repeat;
+      transform: rotate(-20deg);
+      transition: all ease .4s;
+    }
+
+    &:hover::after,
+    &:focus::after  {
+      right: -40px;
+      transform: rotate(-30deg);
+    }
+
     .page-id-267 & {
       background-image: url('https://2019.dublin.wordcamp.org/files/2019/07/dublin-bridge-m.jpg');
     }
