Style single session page

--- a/src/scss/dublin.scss
+++ b/src/scss/dublin.scss
@@ -3,6 +3,7 @@
 @import "./tickets";
 @import "./schedule";
 @import "./organizers";
+@import "./session";
 @import "./speakers";
 @import "./sponsors";
 @import "./header";
