Style single speaker page

--- a/src/scss/dublin.scss
+++ b/src/scss/dublin.scss
@@ -4,6 +4,7 @@
 @import "./schedule";
 @import "./organizers";
 @import "./session";
+@import "./speaker";
 @import "./speakers";
 @import "./sponsors";
 @import "./header";
