Style attendess list

--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -2,6 +2,7 @@
 ## Subscribe to News reusable block
 --------------------------------------------------------------*/
 
-@import "subscribe_news";
-@import "forms";
+@import "attendees";
 @import "buttons";
+@import "forms";
+@import "subscribe_news";
