--- a/src/scss/_sponsors.scss
+++ b/src/scss/_sponsors.scss
@@ -8,6 +8,10 @@
   }
 }
 
+.page-slug-sponsors .tix-clear {
+  display: none;
+}
+
 @media screen and (min-width: 30rem) {
   .wcorg-sponsor {
     margin: 3em 0;
