--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -20,9 +20,14 @@ a:visited {
   color: $primaryColour;
 }
 
+a:hover {
+  color: $lightBlue;
+}
+
 input[type="text"], input[type="email"], input[type="url"], input[type="password"], input[type="search"], input[type="number"], input[type="tel"], input[type="range"], input[type="date"], input[type="month"], input[type="week"], input[type="time"], input[type="datetime"], input[type="datetime-local"], input[type="color"], textarea {
   padding: 0.75rem;
 }
+
 .site-content {
   min-height: calc(100vh - 210px);
   overflow: hidden;
