--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -4,7 +4,7 @@ $headingFont: 'Arvo', serif;
 
 // Colours
 $lightestBlue:	#97cade;		//	rgb(151,202,222)
-$lightBlue: #226ad0;
+$lightBlue: #2875e0;
 $medBlue:	#1d5cb5;		//  rgb(22,49,128)
 $darkBlue: #1d0a69;		//	rgb(29,10,105)
 $darkPurple: #6E1799;		//	rgb(61,4,102)
