Fix menu issue with current items that has children

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -389,7 +389,7 @@
           color: $primaryColour;
         }
 
-        .current-menu-item a {
+        .current-menu-item > a {
           background: $white;
           color: $primaryColour;
         }
