Fix cut menu items and add max-width to privacy policy popup

--- a/src/scss/components/_privacy-policy-popup.scss
+++ b/src/scss/components/_privacy-policy-popup.scss
@@ -1,9 +1,14 @@
 
-  #eu-cookie-law {
-    .accept {
-      background-color: $medBlue;
-      color: #fff;
-    }
+.widget_eu_cookie_law_widget {
+  max-width: 50rem;
+}
+
+#eu-cookie-law {
+  .accept {
+    background-color: $medBlue;
+    color: #fff;
+    padding: .5rem 1rem !important;
+  }
 }
 
 @media (max-width: 30rem) {
