--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -8,10 +8,26 @@
   color: $white;
   flex-wrap: wrap;
   position: relative;
-  overflow: hidden;
+  // overflow: hidden;
 
   .site-branding {
     position: relative;
+
+    &::after {
+      display: block;
+      width: 150px;
+      height: 150px;
+      content: '';
+      position: absolute;
+      top: 20px;
+      right: -70px;
+      background: url('/files/2019/09/Wapuu-Dublin-2019-CMYK2-150x150.png');
+      background-size: contain;
+      background-position: center;
+      background-repeat: no-repeat;
+      transform: rotate(-20deg);
+      transition: all ease .35s;
+    }
 
     .site-title {
       padding: 0;
@@ -37,6 +53,12 @@
       text-align: center;
       padding: 1em;
     }
+  }
+
+  &:hover .site-branding::after,
+  &:focus .site-branding::after  {
+    right: -40px;
+    transform: rotate(-25deg);
   }
 
   .menu-menu-container {
@@ -68,29 +90,6 @@
       height: 100%;
       display: block;
       z-index: 0;
-    }
-
-
-    &::after {
-      display: block;
-      width: 150px;
-      height: 150px;
-      content: '';
-      position: absolute;
-      top: 150px;
-      right: -70px;
-      background: url('/files/2019/09/Wapuu-Dublin-2019-CMYK2-150x150.png');
-      background-size: contain;
-      background-position: center;
-      background-repeat: no-repeat;
-      transform: rotate(-20deg);
-      transition: all ease .35s;
-    }
-
-    &:hover::after,
-    &:focus::after  {
-      right: -40px;
-      transform: rotate(-25deg);
     }
 
     .page-id-267 & {
