Add spacing between homepage sections

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -343,8 +343,6 @@ ul:not(.menu, .sub-menu, .wordcamp-organizers, .wordcamp-speakers, .wordcamp-spo
   }
 }
 
-
-#eu-cookie-law input.accept:hover {
-  color: #fff;
-
+.new-section {
+  margin-top: 5rem !important;
 }
