--- a/src/scss/components/_privacy-policy-popup.scss
+++ b/src/scss/components/_privacy-policy-popup.scss
@@ -8,6 +8,10 @@
     background-color: $medBlue;
     color: #fff;
     padding: .5rem 1rem !important;
+
+    :hover {
+      color: #fff;
+    }
   }
 }
 
