--- a/src/scss/components/_privacy-policy-popup.scss
+++ b/src/scss/components/_privacy-policy-popup.scss
@@ -6,7 +6,7 @@
 #eu-cookie-law {
   .accept {
     background-color: $medBlue;
-    color: #fff;
+    color: #fff !important;
     padding: .5rem 1rem !important;
 
     :hover {
