--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -141,7 +141,8 @@ pre.wp-block-verse,
 [id^=contact-form-],
 #comments,
 .navigation.post-navigation,
-#tix {
+#tix,
+.page-header {
   width: 72rem;
 	max-width: 100%;
 	margin: 1rem auto;
