--- a/src/scss/pages/_sponsors.scss
+++ b/src/scss/pages/_sponsors.scss
@@ -12,52 +12,11 @@
   padding-left: 1rem !important;
   overflow: auto;
 
-  &--platinum {
-    .wordcamp-post-list__post {
-      width: 47%;
-      margin-right: 3%;
-      &:nth-child(n2) {
-        margin-right: 0;
-      }
-    }
-  }
-
-  &--gold,
-  &--venue {
-    .wordcamp-post-list__post {
-      width: 30%;
-      margin-right: 3%;
-      &:nth-child(n3) {
-        margin-right: 0;
-      }
-    }
-  }
-
-  &--silver {
-    .wordcamp-post-list__post {
-      width: 22%;
-      margin-right: 3%;
-      &:nth-child(n4) {
-        margin-right: 0;
-      }
-    }
-  }
-
-  &--bronze,
-  &--in-kind {
-    .wordcamp-post-list__post {
-      width: 17%;
-      margin-right: 3%;
-      &:nth-child(n5) {
-        margin-right: 0;
-      }
-    }
-  }
-
   .wordcamp-post-list__post {
     border: 1px solid rgba(88,88,88,0.15);
     background-color: #fafafa;
     float: left;
+    margin-right: 3%;
     margin-bottom: 30px;
 
     &:hover {
@@ -79,6 +38,7 @@
   &--venue {
     .wordcamp-image__featured-image {
       top: 27%;
+      padding: .5rem;
     }
   }
 
@@ -105,13 +65,56 @@
 }
 
 
+@media screen and (max-width: 48rem) {
+  .wordcamp-sponsors {
+
+    &--platinum {
+      .wordcamp-post-list__post {
+        width: 47%;
+        &:nth-child(2n) {
+          margin-right: 0;
+        }
+      }
+    }
+
+    &--gold,
+    &--venue {
+      .wordcamp-post-list__post {
+        width: 30%;
+        &:nth-child(3n) {
+          margin-right: 0;
+        }
+      }
+    }
+
+    &--silver {
+      .wordcamp-post-list__post {
+        width: 22%;
+        &:nth-child(4n) {
+          margin-right: 0;
+        }
+      }
+    }
+
+    &--bronze,
+    &--in-kind {
+      .wordcamp-post-list__post {
+        width: 17%;
+        &:nth-child(5n) {
+          margin-right: 0;
+        }
+      }
+    }
+  }
+}
+
 @media screen and (min-width: 48rem) {
   .wordcamp-sponsors {
 
     &--platinum {
       .wordcamp-post-list__post {
         width: 30%;
-        &:nth-child(n3) {
+        &:nth-child(3n) {
           margin-right: 0;
         }
       }
@@ -121,7 +124,7 @@
     &--venue {
       .wordcamp-post-list__post {
         width: 22%;
-        &:nth-child(n4) {
+        &:nth-child(4n) {
           margin-right: 0;
         }
       }
@@ -130,7 +133,7 @@
     &--silver {
       .wordcamp-post-list__post {
         width: 17%;
-        &:nth-child(n5) {
+        &:nth-child(5n) {
           margin-right: 0;
         }
       }
@@ -140,7 +143,7 @@
     &--in-kind {
       .wordcamp-post-list__post {
         width: 12%;
-        &:nth-child(n6) {
+        &:nth-child(6n) {
           margin-right: 0;
         }
       }
